
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; } ;
struct in_addr {int dummy; } ;
struct hostent {int h_length; int * h_addr; } ;
typedef struct in_addr* caddr_t ;


 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 char* inet_ntoa (struct in_addr) ;
 int memcpy (struct in_addr*,int *,int) ;
 int perror (char*) ;

char *h_to_ip(char *hostname) {

  struct hostent *h;
  struct sockaddr_in tmp;
  struct in_addr in;

  h = gethostbyname(hostname);

  if (h==((void*)0)) { perror("Resolving the host. \n"); exit(-1); }

  memcpy((caddr_t)&tmp.sin_addr.s_addr, h->h_addr, h->h_length);
  memcpy(&in,&tmp.sin_addr.s_addr,4);

return(inet_ntoa(in));
}
